Fleshed out Nov 13 copy

--- a/newsletter/2022-11-13.md
+++ b/newsletter/2022-11-13.md
@@ -1,51 +1,50 @@
-# Updating some predictions
+# Updating my predictions about Washington and crypto
 ## #Web3Weekly: Nov. 6-12, 2022
 
 ![The U.S. capitol in Washington, D.C.](https://images.unsplash.com/photo-1592448981182-eaf30713032a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80)
-*Photo by Vlad Tchompalov on Unsplash*
+*Photo by Vlad Tchompalov via Unsplash*
 
 *Thanksgiving isn't quite here yet, but I'm already grateful for our sponsor TechCrunch, who's offering a can't-miss treat to #Web3Weekly readers. Their first [TechCrunch Sessions: Crypto](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true) event — on Nov. 17 in Miami — is coming up fast, and it just wouldn't be the same without you. So here’s the deal: The first 25 people to register for the event using [this link](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true) receive a free ticket just for being a #Web3Weekly reader.*
 
 *Take a break from cold crypto winds. Soak up Miami’s sun, find awesome networking opportunities or discover your next hot investment among the up-and-coming startups exhibiting at the show. Join TechCrunch at TC Sessions: Crypto in Miami on November 17 by being one of the first 25 people to register with [this link](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true)!*
 
-**Wow, what a week.** Token markets went on a roller-coaster ride, and FTX [went bankrupt](https://slate.com/technology/2022/11/sam-bankman-fried-ftx-sbf-binance.html), a nasty surprise that renewed the debate over centralized exchanges' role in crypto. <!-- Need links -->
+**Wow, what a week.** FTX filed for [Chapter 11 bankruptcy protection](https://www.nytimes.com/2022/11/11/business/ftx-bankruptcy.html), which in turn [roiled crypto markets](https://www.coindesk.com/markets/2022/11/11/market-wrap-bitcoin-returns-to-red-tumbling-7-on-ftx-collapse/) and renewed debate over [centralized exchanges' role](https://slate.com/technology/2022/11/ftx-collapse-sam-bankman-fried-dirty-bubble-cryptocurrency.html) in the crypto market.
 
-There was a also a big election in the U.S., which may have deep implications for the industry the next few years. (We call these "midterm elections" in America, because they fall in the middle of the president's four-year term.) I want to focus on that for now, as I have a promise to keep related to it.
+There was a also a [big election in the U.S.](https://time.com/6233414/midterm-wave-election-history/), which may have deep implications for the industry the next few years. (We call these "midterm elections" in America, because they fall in the middle of the president's four-year term.) I want to focus on that for now, as I have a promise to keep related to it.
 
-Specifically, I made a [round of predictions](https://mailchi.mp/e75eddb5bf21/30n88eh8sm) after our last national election here, in November 2020, when Joe Biden was elected president. I purposely limited the scope of those predictions to the following two years, precisely because the midterms can greatly affect the course of a presidency if they produce s a new congressional majority. And I promised to check back after the 2022 midterms to see how my 2020 predictions fared.
+Specifically, I made a [round of predictions](https://mailchi.mp/e75eddb5bf21/30n88eh8sm) after our last national election here, in November 2020, when Joe Biden was elected president. I purposely limited the scope of those predictions to the following two years, precisely because the midterms can greatly affect the course of a presidency if they produce a new congressional majority. And I promised to check back after the 2022 midterms to see how my 2020 predictions fared.
 
-So let's get to it. Note, I'm including just the headline version of each 2020 prediction here and an assessment of how it went, for the sake of brevity here. If you want the fuller commentary explaining each 2020 prediction, please check the [original article from 2020](https://mailchi.mp/e75eddb5bf21/30n88eh8sm).
+So let's get to it. Note, I'm including just the headline version of each 2020 prediction and an assessment of how it went, for the sake of brevity here. If you want the fuller commentary explaining each 2020 prediction, please check the [original article from 2020](https://mailchi.mp/e75eddb5bf21/30n88eh8sm):
 
-Further on, I'll make new predictions through the *next* national election in 2024. But first let's run through the old ones, as promised:
+- **There will be no new laws clarifying federal crypto regulation.** *Mostly wrong.* My main mistake with this one was phrasing it way too broadly. In fact, the crypto industry did get *some* new rules, [crammed into the infrastructure bill](https://www.cnbc.com/2021/11/09/how-bipartisan-infrastructure-bill-will-impact-crypto-investors.html) that won passage and ostensibly was about roads, bridges, and solar panels. In particular, the crypto parts of the bill increased tax reporting requirements for brokers and exchanges.
 
-- **There will be no new laws clarifying federal crypto regulation.** *Mostly wrong.* My main mistake with this one was phrasing it way too broadly. In fact, the crypto industry did get *some* notable new rules, crammed into the infrastructure bill that won passange and ostensibly was about roads, bridges, rural internet access, and solar panels. In particular, the crypto parts of the bill increased reporting requirements for centralized exchanges. <!-- TKTKTK description -->
-However, there was no broad crypto-specific bill providing a comprehensive framework for the industry covering a wider array of issues. <!-- Package at ~2:00 in recent Bloomberg crypto show summarize lack of progress on crypto regulation nicely: https://www.youtube.com/watch?v=2CxARZyIYFA -->
+However, there was no crypto-specific bill providing a comprehensive federal framework covering a broader array of issues in the U.S. around crypto payments, what causes a token to qualify as a security, and so forth. Instead those issues continue to be litigated in America through a mix of "creative" application of existing laws from the pre-crypto era, a patchwork of state-level rules, and ever shifting court precedents.
 
-- **Tech giants' algorithmic filter bubbles will continue to undermine democracy as we know it.** *Correct.* Do I even need to elaborate on this one? Let's move on...
+In other words, a colossal headache for the industry much as I predicted back in 2020. And lest you think I'm the only one who's noticed, check out this [excellent discussion](https://www.youtube.com/watch?v=2CxARZyIYFA&t=110s) of the problem from Bloomberg Television shortly before the recent midterm balloting.
 
-- **Ethereum 2.0 will be a hit.** *Correct.*
+- **Tech giants' algorithmic filter bubbles will continue to undermine democracy as we know it.** *Correct.* If anything, the problem is just morphing in slightly different directions while maintaining its same essential awfulness. The latest specific iterations are nonsense election denial memes [on social](https://www.thestreet.com/technology/why-social-media-networks-are-targets-of-election-disinformation), TikTok's [possible role](https://www.buzzfeednews.com/article/emilybakerwhite/tiktok-tapes-us-user-data-china-bytedance-access) as a Trojan horse in the West for Chinese Communist Party tyrants, and [unintended consequences](https://news.yahoo.com/n-word-twitter-rises-500-133443000.html) of Elon Musk's chaotic takeover of Twitter that empower trolls and hate groups.
 
-- **The era of a weaker, more digital dollar will take hold.** *Partial credit.*
+- **Ethereum 2.0 will be a hit.** *Correct.* The second-most popular blockchain network took a lot of [ribbing](https://cryptonomist.ch/wp-content/uploads/2020/04/vitalik-1.jpg) for its verrry gradual rollout its upgrade to a proof-of-stake protocol for verifying on-chain transactions the last few years. But since the Ethereum community hit the button in mid-September on the full transition, nicknamed [The Merge](https://ethereum.org/en/upgrades/merge/), all the testing seems to have [paid off](https://www.inc.com/inc-masters/three-major-takeaways-from-ethereums-merge.html).
 
-- **Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.** *Inconclusive.*
+True, miners aren't happy about how The Merge has [upended the network's incentive structure](https://www.fxmag.com/crypto/anyone-can-become-a-validator-without-specialized-equipment-what-is-the-ethereum-merge-our-team-explains). But there hasn't been any major technical failure of the network, power consumption has plummeted to almost nil, and ETH's token price has held up relatively well amid a bear market for crypto overall, thanks in part to a diminished [post-Merge supply](https://www.fxstreet.com/cryptocurrencies/news/could-ethereum-beat-the-bear-market-as-supply-falls-post-merge-202211100749) of ETH in circulation. The token is down "just" 6 percent in the last 30 days, versus declines of 14% in BTC and 9% in global crypto market valuation, according to data from CoinMarketCap.
 
-<!-- Sked AI tweet. -->
-<!-- Push metaverse awards announcement to Nov. 20... -->
-<!--
+- **The era of a weaker, more digital dollar will take hold.** *Half credit.* I was wrong about the "weaker" part of this prediction, as I didn't anticipate the Federal Reserve's rapid tightening of the global supply of greenbacks to fight inflation. But I was spot-on about the "more digital" part, as the popularity of dollar-based stablecoins has continued to mushroom since late 2020. Market capitalization of Tether, the largest stablecoin, has more than quadrupled since the 2020 election, recently hovering near $70 billion according to CoinMarketCap.
 
-- Make some through year-end '24.
+- **Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.** *Inconclusive.* Honestly, we haven't fully recovered yet, so it's hard to call this one either way. After two straight quarterly declines in U.S. gross domestic product -- a longtime rule-of-thumb definition on Wall Street for recession -- the government's initial estimate of GDP for 2022's third period showed a [modest increase](https://www.bea.gov/news/2022/gross-domestic-product-third-quarter-2022-advance-estimate). That's welcome news, but still a single, very preliminary datapoint. Meanwhile, there are still a lot of worrisome signs elsewhere, including the lingering effects of higher interest rates and [sagging optimism](https://www.reuters.com/markets/us/us-consumer-sentiment-falls-november-inflation-expectations-rise-2022-11-11/) among consumers, which can often precede declines in actual spending. So I can't break out my party hat for any U.S. recovery quite yet, city-led or otherwise.
 
-- Casey on the midterms: https://www.coindesk.com/layer2/2022/11/04/at-stake-in-the-us-midterms-the-future-of-money/
+**On to some new predictions** for the *next* two years. This is what I'm expecting through the November 2024 presidential election, after which I'll do another assessment of what I got right and wrong:
 
--->
+- **There will still be no comprehensive federal framework for crypto regulation.** Hey, I'll be more specific this time. Congress is still just too dysfunctional to get such legislation passed, especially as it seems likely we're headed toward a "divided government" scenario between the two major parties. Pending a few 2022 House races where ballots are still being counted, a Republican majority in that chamber seems likely. Meanwhile, Democrats will control the presidency and Senate. This is a fine recipe for paralysis on everything, let alone a complicated issue of technical and financial innovation.
 
-On to some new predictions:
+- **Fed tightening will end, paving the way for a rally in risk assets.** The long-term norm of "easy money" since at least the 2008 financial crisis has to reassert itself at some point in the U.S.
 
-- There will be no new omnibus federal framework for crypto regulation that gives the industry clarity.
-- Fed tightening will end, paving the way for a rally in risk assets.
-- Bitcoin dominance will continue to erode.
-- Global crypto market cap will grow faster than the S&P 500.
-- Biden will run for re-election.
+- **Global crypto market cap will grow faster than the S&P 500.** A byproduct of the above prediction, if I'm right about that one.
+
+- **Ethereum won't establish Layer 1 dominance in web3, which will continue to be a multi-chain affair.** Developers haven't exactly flocked to any of the many alternative application-focused chains out there, but in my experience, they do remain keenly "alt curious." This seems due largely to an issue that wasn't directly addressed by Ethereum's recent Merge -- transaction fees. It also strikes me this is one big reason Ethereum's share of the broader crypto market has barely budged all year, hovering at 15-20% according to CoinMarketCap. In other words, there are still a lot of opportunities for other chains to find their niche as the base layer for building games, defi apps, and more.  
+
+- **Biden will run for re-election -- and keep Kamala Harris as his running mate.** There's been a lot of speculation in the press lately about Mr. Biden sticking to one term, especially in light of his age. (He'll be 82 on Election Day 2024.) But given the immense egos and ambition of politicians in general, I just can't see any incumbent president passing up a second run.
+
+For similar reasons, I believe he'll stick with Harris on the ticket, which will probably be the *next* round of Washington press speculation whenever there's a slow news day. Again, an incumbent switching running mates never actually happens in the modern era. But it's a fun parlor game to play whenever an incumbent president is up for re-election.
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
