--- a/newsletter/2022-11-13.md
+++ b/newsletter/2022-11-13.md
@@ -8,29 +8,29 @@
 
 *Take a break from cold crypto winds. Soak up Miami’s sun, find awesome networking opportunities or discover your next hot investment among the up-and-coming startups exhibiting at the show. Join TechCrunch at TC Sessions: Crypto in Miami on November 17 by being one of the first 25 people to register with [this link](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true)!*
 
-**Wow, what a week.** FTX filed for [Chapter 11 bankruptcy protection](https://www.nytimes.com/2022/11/11/business/ftx-bankruptcy.html), which in turn [roiled crypto markets](https://www.coindesk.com/markets/2022/11/11/market-wrap-bitcoin-returns-to-red-tumbling-7-on-ftx-collapse/) and renewed debate over [centralized exchanges' role](https://slate.com/technology/2022/11/ftx-collapse-sam-bankman-fried-dirty-bubble-cryptocurrency.html) in the crypto market.
+**Wow, what a week.** FTX filed for [Chapter 11 bankruptcy protection](https://www.nytimes.com/2022/11/11/business/ftx-bankruptcy.html), which in turn [roiled crypto markets](https://www.coindesk.com/markets/2022/11/11/market-wrap-bitcoin-returns-to-red-tumbling-7-on-ftx-collapse/) and renewed debate over [centralized exchanges' role](https://slate.com/technology/2022/11/ftx-collapse-sam-bankman-fried-dirty-bubble-cryptocurrency.html) in crypto.
 
 There was a also a [big election in the U.S.](https://time.com/6233414/midterm-wave-election-history/), which may have deep implications for the industry the next few years. (We call these "midterm elections" in America, because they fall in the middle of the president's four-year term.) I want to focus on that for now, as I have a promise to keep related to it.
 
 Specifically, I made a [round of predictions](https://mailchi.mp/e75eddb5bf21/30n88eh8sm) after our last national election here, in November 2020, when Joe Biden was elected president. I purposely limited the scope of those predictions to the following two years, precisely because the midterms can greatly affect the course of a presidency if they produce a new congressional majority. And I promised to check back after the 2022 midterms to see how my 2020 predictions fared.
 
-So let's get to it. Note, I'm including just the headline version of each 2020 prediction and an assessment of how it went, for the sake of brevity here. If you want the fuller commentary explaining each 2020 prediction, please check the [original article from 2020](https://mailchi.mp/e75eddb5bf21/30n88eh8sm):
+So let's get to it. Note, I'm including just the headline version of each 2020 prediction and an assessment of how it went, for the sake of brevity here. If you want the fuller commentary I gave explaining each prediction, please check the [original article from 2020](https://mailchi.mp/e75eddb5bf21/30n88eh8sm):
 
-- **There will be no new laws clarifying federal crypto regulation.** *Mostly wrong.* My main mistake with this one was phrasing it way too broadly. In fact, the crypto industry did get *some* new rules, [crammed into the infrastructure bill](https://www.cnbc.com/2021/11/09/how-bipartisan-infrastructure-bill-will-impact-crypto-investors.html) that won passage and ostensibly was about roads, bridges, and solar panels. In particular, the crypto parts of the bill increased tax reporting requirements for brokers and exchanges.
+<p><li>**There will be no new laws clarifying federal crypto regulation.** *Mostly wrong.* My main mistake with this one was phrasing it way too broadly. In fact, the crypto industry did get *some* new rules, [crammed into the infrastructure bill](https://www.cnbc.com/2021/11/09/how-bipartisan-infrastructure-bill-will-impact-crypto-investors.html) that won passage and ostensibly was about roads, bridges, and solar panels. In particular, the crypto parts of the bill increased tax reporting requirements for brokers and exchanges.<p>
 
-However, there was no crypto-specific bill providing a comprehensive federal framework covering a broader array of issues in the U.S. around crypto payments, what causes a token to qualify as a security, and so forth. Instead those issues continue to be litigated in America through a mix of "creative" application of existing laws from the pre-crypto era, a patchwork of state-level rules, and ever shifting court precedents.
+<p>However, there was no crypto-specific bill providing a comprehensive federal framework covering a broader array of issues in the U.S. around crypto payments, what causes a token to qualify as a security, and so forth. Instead those issues continue to be litigated in America through a mix of "creative" application of existing laws from the pre-crypto era, a patchwork of state-level rules, and ever shifting court precedents.</p>
 
-In other words, a colossal headache for the industry much as I predicted back in 2020. And lest you think I'm the only one who's noticed, check out this [excellent discussion](https://www.youtube.com/watch?v=2CxARZyIYFA&t=110s) of the problem from Bloomberg Television shortly before the recent midterm balloting.
+<p>In other words, a colossal headache for the industry much as I predicted back in 2020. And lest you think I'm the only one who's noticed, check out this [excellent discussion](https://www.youtube.com/watch?v=2CxARZyIYFA&t=110s) of the problem from Bloomberg Television shortly before the recent midterm balloting.</li></p>
 
-- **Tech giants' algorithmic filter bubbles will continue to undermine democracy as we know it.** *Correct.* If anything, the problem is just morphing in slightly different directions while maintaining its same essential awfulness. The latest specific iterations are nonsense election denial memes [on social](https://www.thestreet.com/technology/why-social-media-networks-are-targets-of-election-disinformation), TikTok's [possible role](https://www.buzzfeednews.com/article/emilybakerwhite/tiktok-tapes-us-user-data-china-bytedance-access) as a Trojan horse in the West for Chinese Communist Party tyrants, and [unintended consequences](https://news.yahoo.com/n-word-twitter-rises-500-133443000.html) of Elon Musk's chaotic takeover of Twitter that empower trolls and hate groups.
+<p><li>**Tech giants' algorithmic filter bubbles will continue to undermine democracy as we know it.** *Correct.* If anything, the problem is just morphing in slightly different directions while maintaining its same essential awfulness. The latest specific iterations are nonsense election denial memes [on social](https://www.thestreet.com/technology/why-social-media-networks-are-targets-of-election-disinformation), TikTok's [possible role](https://www.buzzfeednews.com/article/emilybakerwhite/tiktok-tapes-us-user-data-china-bytedance-access) as a Trojan horse in the West for Chinese Communist Party tyrants, and [unintended consequences](https://news.yahoo.com/n-word-twitter-rises-500-133443000.html) of Elon Musk's chaotic takeover of Twitter that empower trolls and hate groups.</li><p>
 
-- **Ethereum 2.0 will be a hit.** *Correct.* The second-most popular blockchain network took a lot of [ribbing](https://cryptonomist.ch/wp-content/uploads/2020/04/vitalik-1.jpg) for its verrry gradual rollout its upgrade to a proof-of-stake protocol for verifying on-chain transactions the last few years. But since the Ethereum community hit the button in mid-September on the full transition, nicknamed [The Merge](https://ethereum.org/en/upgrades/merge/), all the testing seems to have [paid off](https://www.inc.com/inc-masters/three-major-takeaways-from-ethereums-merge.html).
+<p><li>**Ethereum 2.0 will be a hit.** *Correct.* The second-most popular blockchain network took a lot of [ribbing](https://cryptonomist.ch/wp-content/uploads/2020/04/vitalik-1.jpg) for its verrry gradual rollout its upgrade to a proof-of-stake protocol for verifying on-chain transactions the last few years. But since the Ethereum community hit the button in mid-September on the full transition, nicknamed [The Merge](https://ethereum.org/en/upgrades/merge/), all the testing seems to have [paid off](https://www.inc.com/inc-masters/three-major-takeaways-from-ethereums-merge.html).</p>
 
-True, miners aren't happy about how The Merge has [upended the network's incentive structure](https://www.fxmag.com/crypto/anyone-can-become-a-validator-without-specialized-equipment-what-is-the-ethereum-merge-our-team-explains). But there hasn't been any major technical failure of the network, power consumption has plummeted to almost nil, and ETH's token price has held up relatively well amid a bear market for crypto overall, thanks in part to a diminished [post-Merge supply](https://www.fxstreet.com/cryptocurrencies/news/could-ethereum-beat-the-bear-market-as-supply-falls-post-merge-202211100749) of ETH in circulation. The token is down "just" 6 percent in the last 30 days, versus declines of 14% in BTC and 9% in global crypto market valuation, according to data from CoinMarketCap.
+<p>True, miners aren't happy about how The Merge has [upended the network's incentive structure](https://www.fxmag.com/crypto/anyone-can-become-a-validator-without-specialized-equipment-what-is-the-ethereum-merge-our-team-explains). But there hasn't been any major technical failure of the network, power consumption has plummeted to almost nil, and ETH's token price has held up relatively well amid a bear market for crypto overall, thanks in part to a diminished [post-Merge supply](https://www.fxstreet.com/cryptocurrencies/news/could-ethereum-beat-the-bear-market-as-supply-falls-post-merge-202211100749) of ETH in circulation. The token is down "just" 6 percent in the last 30 days, versus declines of 14% in BTC and 9% in global crypto market valuation, according to data from CoinMarketCap.</li><p>
 
-- **The era of a weaker, more digital dollar will take hold.** *Half credit.* I was wrong about the "weaker" part of this prediction, as I didn't anticipate the Federal Reserve's rapid tightening of the global supply of greenbacks to fight inflation. But I was spot-on about the "more digital" part, as the popularity of dollar-based stablecoins has continued to mushroom since late 2020. Market capitalization of Tether, the largest stablecoin, has more than quadrupled since the 2020 election, recently hovering near $70 billion according to CoinMarketCap.
+<li><p>**The era of a weaker, more digital dollar will take hold.** *Half credit.* I was wrong about the "weaker" part of this prediction, as I didn't anticipate the Federal Reserve's rapid tightening of the global supply of greenbacks to fight inflation. But I was spot-on about the "more digital" part, as the popularity of dollar-based stablecoins has continued to mushroom since late 2020. Market capitalization of Tether, the largest stablecoin, has more than quadrupled since the 2020 election, recently hovering near $70 billion according to CoinMarketCap.</li><p>
 
-- **Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.** *Inconclusive.* Honestly, we haven't fully recovered yet, so it's hard to call this one either way. After two straight quarterly declines in U.S. gross domestic product -- a longtime rule-of-thumb definition on Wall Street for recession -- the government's initial estimate of GDP for 2022's third period showed a [modest increase](https://www.bea.gov/news/2022/gross-domestic-product-third-quarter-2022-advance-estimate). That's welcome news, but still a single, very preliminary datapoint. Meanwhile, there are still a lot of worrisome signs elsewhere, including the lingering effects of higher interest rates and [sagging optimism](https://www.reuters.com/markets/us/us-consumer-sentiment-falls-november-inflation-expectations-rise-2022-11-11/) among consumers, which can often precede declines in actual spending. So I can't break out my party hat for any U.S. recovery quite yet, city-led or otherwise.
+<li><p>**Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.** *Inconclusive.* Honestly, we haven't fully recovered yet, so it's hard to call this one either way. After two straight quarterly declines in U.S. gross domestic product -- a longtime rule-of-thumb definition on Wall Street for recession -- the government's initial estimate of GDP for 2022's third period showed a [modest increase](https://www.bea.gov/news/2022/gross-domestic-product-third-quarter-2022-advance-estimate). That's welcome news, but still a single, very preliminary datapoint. Meanwhile, there are still a lot of worrisome signs elsewhere, including the lingering effects of higher interest rates and [sagging optimism](https://www.reuters.com/markets/us/us-consumer-sentiment-falls-november-inflation-expectations-rise-2022-11-11/) among consumers, which can often precede declines in actual spending. So I can't break out my party hat for any U.S. recovery quite yet, city-led or otherwise.</li><p>
 
 **On to some new predictions** for the *next* two years. This is what I'm expecting through the November 2024 presidential election, after which I'll do another assessment of what I got right and wrong:
 
