Final copy for 13 Nov

--- a/newsletter/2022-11-13.md
+++ b/newsletter/2022-11-13.md
@@ -32,23 +32,27 @@ So let's get to it. Note, I'm including just the headline version of each 2020 p
 
 <li><p><strong>The era of a weaker, more digital dollar will take hold.</strong> <em>Half credit.</em> I was wrong about the "weaker" part of this prediction, as I didn't anticipate the Federal Reserve's rapid tightening of the global supply of greenbacks to fight inflation. But I was spot-on about the "more digital" part, as the popularity of dollar-based stablecoins has continued to mushroom since late 2020. Market capitalization of Tether, the largest stablecoin, has more than quadrupled since the 2020 election, recently hovering near $70 billion according to CoinMarketCap.<p></li>
 
-<li><p>**Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.** *Inconclusive.* Honestly, we haven't fully recovered yet, so it's hard to call this one either way. After two straight quarterly declines in U.S. gross domestic product -- a longtime rule-of-thumb definition on Wall Street for recession -- the government's initial estimate of GDP for 2022's third period showed a [modest increase](https://www.bea.gov/news/2022/gross-domestic-product-third-quarter-2022-advance-estimate). That's welcome news, but still a single, very preliminary datapoint. Meanwhile, there are still a lot of worrisome signs elsewhere, including the lingering effects of higher interest rates and [sagging optimism](https://www.reuters.com/markets/us/us-consumer-sentiment-falls-november-inflation-expectations-rise-2022-11-11/) among consumers, which can often precede declines in actual spending. So I can't break out my party hat for any U.S. recovery quite yet, city-led or otherwise.</li><p>
+<li><p><strong>Our cities, including the tech and finance hubs, will lead America's eventual economic recovery from COVID19.</strong> <em>Inconclusive.</em> Honestly, we haven't fully recovered yet, so it's hard to call this one either way. After two straight quarterly declines in U.S. gross domestic product -- a longtime rule-of-thumb definition on Wall Street for recession -- the government's initial estimate of GDP for 2022's third period showed a <a href="https://www.bea.gov/news/2022/gross-domestic-product-third-quarter-2022-advance-estimate">modest increase</a>. That's welcome news, but still a single, very preliminary datapoint. Meanwhile, there are still a lot of worrisome signs elsewhere, including the lingering effects of higher interest rates and <a href="https://www.reuters.com/markets/us/us-consumer-sentiment-falls-november-inflation-expectations-rise-2022-11-11/">sagging optimism</a> among consumers, which can often precede declines in actual spending. So I can't break out my party hat for any U.S. recovery quite yet, city-led or otherwise.</p></li>
 
 </ul>
 
 **On to some new predictions** for the *next* two years. This is what I'm expecting through the November 2024 presidential election, after which I'll do another assessment of what I got right and wrong:
 
-- **There will still be no comprehensive federal framework for crypto regulation.** Hey, I'll be more specific this time. Congress is still just too dysfunctional to get such legislation passed, especially as it seems likely we're headed toward a "divided government" scenario between the two major parties. Pending a few 2022 House races where ballots are still being counted, a Republican majority in that chamber seems likely. Meanwhile, Democrats will control the presidency and Senate. This is a fine recipe for paralysis on everything, let alone a complicated issue of technical and financial innovation.
+<ul>
 
-- **Fed tightening will end, paving the way for a rally in risk assets.** The long-term norm of "easy money" since at least the 2008 financial crisis has to reassert itself at some point in the U.S.
+<li><p><strong>There will still be no comprehensive federal framework for crypto regulation.</strong> Hey, I'll be more specific this time. Congress is still just too dysfunctional to get such legislation passed, especially as it seems likely we're headed toward a "divided government" scenario between the two major parties. Pending a few 2022 House races where ballots are still being counted, a Republican majority in that chamber seems likely. Meanwhile, Democrats will control the presidency and Senate. This is a fine recipe for paralysis on everything, let alone a complicated issue of technical and financial innovation.</p></li>
 
-- **Global crypto market cap will grow faster than the S&P 500.** A byproduct of the above prediction, if I'm right about that one.
+<li><p><strong>Fed tightening will end, paving the way for a rally in risk assets.</strong> The long-term norm of "easy money" since at least the 2008 financial crisis has to reassert itself at some point in the U.S.</p></li>
 
-- **Ethereum won't establish Layer 1 dominance in web3, which will continue to be a multi-chain affair.** Developers haven't exactly flocked to any of the many alternative application-focused chains out there, but in my experience, they do remain keenly "alt curious." This seems due largely to an issue that wasn't directly addressed by Ethereum's recent Merge -- transaction fees. It also strikes me this is one big reason Ethereum's share of the broader crypto market has barely budged all year, hovering at 15-20% according to CoinMarketCap. In other words, there are still a lot of opportunities for other chains to find their niche as the base layer for building games, defi apps, and more.  
+<li><p><strong>Global crypto market cap will grow faster than the S&P 500</strong> A byproduct of the above prediction, if I'm right about that one.</p></li>
 
-- **Biden will run for re-election -- and keep Kamala Harris as his running mate.** There's been a lot of speculation in the press lately about Mr. Biden sticking to one term, especially in light of his age. (He'll be 82 on Election Day 2024.) But given the immense egos and ambition of politicians in general, I just can't see any incumbent president passing up a second run.
+<li><p><strong>Ethereum won't establish Layer 1 dominance in web3, which will continue to be a multi-chain affair.</strong> Developers haven't exactly flocked to any of the many alternative application-focused chains out there, but in my experience, they do remain keenly "alt curious." This seems due largely to an issue that wasn't directly addressed by Ethereum's recent Merge -- transaction fees. It also strikes me this is one big reason Ethereum's share of the broader crypto market has barely budged all year, hovering at 15-20% according to CoinMarketCap. In other words, there are still a lot of opportunities for other chains to find their niche as the base layer for building games, defi apps, and more.</p></li>  
 
-For similar reasons, I believe he'll stick with Harris on the ticket, which will probably be the *next* round of Washington press speculation whenever there's a slow news day. Again, an incumbent switching running mates never actually happens in the modern era. But it's a fun parlor game to play whenever an incumbent president is up for re-election.
+<li><p><strong>Biden will run for re-election -- and keep Kamala Harris as his running mate.</strong> There's been a lot of speculation in the press lately about Mr. Biden sticking to one term, especially in light of his age. (He'll be 82 on Election Day 2024.) But given the immense egos and ambition of politicians in general, I just can't see any incumbent president passing up a second run.</p>
+
+<p>For similar reasons, I believe he'll stick with Harris on the ticket, which will probably be the <em>next</em> round of Washington press speculation whenever there's a slow news day. Again, an incumbent switching running mates never actually happens in the modern era. But it's a fun parlor game to play whenever an incumbent president is up for re-election.</p></li>
+
+<ul>
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
