Minor tweaks to markup

--- a/newsletter/2022-11-13.md
+++ b/newsletter/2022-11-13.md
@@ -8,7 +8,7 @@
 
 *Take a break from cold crypto winds. Soak up Miami’s sun, find awesome networking opportunities or discover your next hot investment among the up-and-coming startups exhibiting at the show. Join TechCrunch at TC Sessions: Crypto in Miami on November 17 by being one of the first 25 people to register with [this link](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true)!*
 
-**Wow, what a week.** FTX filed for [Chapter 11 bankruptcy protection](https://www.nytimes.com/2022/11/11/business/ftx-bankruptcy.html), which in turn [roiled crypto markets](https://www.coindesk.com/markets/2022/11/11/market-wrap-bitcoin-returns-to-red-tumbling-7-on-ftx-collapse/) and renewed debate over [centralized exchanges' role](https://slate.com/technology/2022/11/ftx-collapse-sam-bankman-fried-dirty-bubble-cryptocurrency.html) in crypto.
+**Wow, what a week.** FTX filed for [Chapter 11 bankruptcy protection](https://www.nytimes.com/2022/11/11/business/ftx-bankruptcy.html), which in turn [roiled crypto markets](https://www.coindesk.com/markets/2022/11/11/market-wrap-bitcoin-returns-to-red-tumbling-7-on-ftx-collapse/) and renewed debate over [centralized exchanges' role](https://slate.com/technology/2022/11/ftx-collapse-sam-bankman-fried-dirty-bubble-cryptocurrency.html) in the industry.
 
 There was a also a [big election in the U.S.](https://time.com/6233414/midterm-wave-election-history/), which may have deep implications for the industry the next few years. (We call these "midterm elections" in America, because they fall in the middle of the president's four-year term.) I want to focus on that for now, as I have a promise to keep related to it.
 
@@ -52,7 +52,7 @@ So let's get to it. Note, I'm including just the headline version of each 2020 p
 
 <p>For similar reasons, I believe he'll stick with Harris on the ticket, which will probably be the <em>next</em> round of Washington press speculation whenever there's a slow news day. Again, an incumbent switching running mates never actually happens in the modern era. But it's a fun parlor game to play whenever an incumbent president is up for re-election.</p></li>
 
-<ul>
+</ul>
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
