--- a/newsletter/2022-11-20.md
+++ b/newsletter/2022-11-20.md
@@ -13,7 +13,7 @@ The grim topic of FTX's meltdown and what it means for the broader crypto indust
 
 I think it also helped greatly to have TechCrunch's journalists hosting most of the panel discussions. They asked appropriately tough questions, and the industry insiders took them in stride, answering as best they could.
 
-Some highlights:
+In other words, a very healthy conversation. Some highlights:
 
 - **Binance CEO Changpeng Zhao** made his most extensive public comments to date rearding the collapse of rival FTX. Speaking to the conference's [opening session](https://techcrunch.com/2022/11/17/binances-cz-on-ftx-we-were-the-last-straw-that-broke-the-camels-back/) via a remote video feed, the CEO who goes by his initials CZ said
 he didn't know full details of the problems at FTX prior to its meltdown, though some "mental mathematics" him gave a general sense of its competitive position versus Binance.
