Minor edits to 4 Dec 2022 copy

--- a/newsletter/2022-12-04.md
+++ b/newsletter/2022-12-04.md
@@ -3,7 +3,7 @@
 
 **Legendary Washington Post editor Ben Bradlee** once said there is a large category of stories that are "interesting if true." In other words, narratives some concerned party is peddling that require further independent verification.
 
-The crypto world saw a doozie of such a story last week: FTX founder Sam Bankman-Fried granted several media interviews in which he portrayed the exchange's implosion as unintended tragedy, not purposeful fraud. His most extensive remarks were during an hour-long [live interview](https://www.youtube.com/watch?v=IyoGdwVIwWw) with the New York Times' Andrew Ross Sorkin at a conference sponsored by the newspaper, including some laudably [tough questioning](https://www.mediaite.com/opinion/andrew-ross-sorkins-interview-of-disgraced-sam-bankman-fried-was-journalism-masterclass/) by Sorkin.
+The crypto world saw a doozie of such a story last week: FTX founder Sam Bankman-Fried granted several media interviews in which he portrayed the exchange's implosion as unintended tragedy, not purposeful fraud. His most extensive remarks were an hour-long [live interview](https://www.youtube.com/watch?v=IyoGdwVIwWw) with the New York Times' Andrew Ross Sorkin at a conference sponsored by the newspaper, including some laudably [tough questioning](https://www.mediaite.com/opinion/andrew-ross-sorkins-interview-of-disgraced-sam-bankman-fried-was-journalism-masterclass/) by Sorkin.
 
 Needless to say, [not everyone](https://www.msn.com/en-us/money/markets/crypto-billionaire-mike-novogratz-says-sam-bankman-fried-should-go-to-jail-as-the-ex-ftx-billionaire-worries-about-paying-his-lawyers/ar-AA14PTls) is buying Bankman-Fried's benign characterization of events [quite yet](https://money.yahoo.com/coinbase-ceo-brian-armstrong-says-231208022.html). But it is nevertheless interesting (strictly by Bradlee's definition) to hear him go on the record with it, especially as he says he's going public [against his lawyers' advice](https://www.msn.com/en-us/money/companies/what-legal-strategy-sam-bankman-fried-s-ftx-comments-will-cause-headaches-experts-say/ar-AA14HvKC).
 
@@ -25,7 +25,7 @@ The week's other notable headlines:
 
 - **Government workers in Suffolk County, N.Y.**, are still relying on '90s-era technology for some tasks following a ransomeware attack [two months ago](https://www.nytimes.com/2022/11/28/nyregion/suffolk-county-cyber-attack.html), the New York Times reports.
 
-- **A Modernist painting by Piet Mondrian** may have been hanging upside-down for decades in a Berlin art gallery. But they're going to [leave it that way](https://www.cnn.com/style/article/piet-mondrian-painting-upside-down-trnd/index.html) for now, CNN reports.
+- **A Modernist painting by Piet Mondrian** may have been hanging upside-down for decades in a Berlin art gallery. But they're going to [leave it that way](https://www.cnn.com/style/article/piet-mondrian-painting-upside-down-trnd/index.html) for now, according to CNN.
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
