--- a/newsletter/2022-12-11.md
+++ b/newsletter/2022-12-11.md
@@ -8,11 +8,16 @@
 
 -->
 
-**CoinDesk just published** its ninth annual [50 Most Influential People in Crypto](https://www.coindesk.com/consensus-magazine/2022/12/05/coindesks-most-influential-2022/) list. Binance founder "CZ" Zhao took the number-one spot, while FTX's Sam Bankman-Fried came in at... #47?
+# Sam who?
+## #Web3Weekly: Dec. 4-10, 2022
+
+**CoinDesk just published** its ninth annual [50 Most Influential People in Crypto](https://www.coindesk.com/consensus-magazine/2022/12/05/coindesks-most-influential-2022/) list. Binance founder "CZ" Zhao took the number-one spot, while FTX's Sam Bankman-Fried came in at...
+
+Number 47?
 
 Given what a trainwreck this year has been in the industry, and considering that "influence" can be either a positive or negative thing, I would have put SBF a lot higher, to be honest.
 
-Sure, the year's market losses and bad PR started well before FTX collapsed. But that story is at least highly *emblematic* of how things have gone overall in 2022. In the future, when we look back at this Crypto Winter as a historical event, no doubt SBF will be its poster child.
+Sure, the year's market losses and slide in public perception started well before FTX collapsed. But that story is at least highly *emblematic* of how things have gone overall in 2022. In the future, when we look back at this Crypto Winter as a historical event, no doubt SBF will be its poster child.
 
 At any rate, these lists are inherently designed to provoke arguments among readers. CoinDesk will definitely accomplish that with this latest one, I guess.
 
